# platform.core.api.package-manager

./: AUTHORS  CMakeLists.txt  TODO  capi-appfw-package-manager.pc.in  project.config
debian/: capi-appfw-package-manager.install  changelog  control  rules
doc/: package_manager_doc.h
include/: package_info.h  package_manager.h  package_manager_internal.h  package_manager_private.h
packaging/: capi-appfw-package-manager.changes  capi-appfw-package-manager.spec
src/: package_info.c  package_manager.c  package_manager_drm.c  package_manager_internal.c  package_manager_internal.h
tool/: CMakeLists.txt  main.c
