CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_INSTALL_PREFIX /usr)
SET(PREFIX ${CMAKE_INSTALL_PREFIX})

SET(PACKAGE_MANAGER "capi-appfw-package-manager")
PROJECT(${PACKAGE_MANAGER})
SET(SOURCES src/package_info.c
	src/package_manager.c
	src/package_manager_internal.c)

INCLUDE(FindPkgConfig)
pkg_check_modules(PKGS REQUIRED
	capi-base-common
	dlog
	vconf
	aul
	ail
	pkgmgr
	pkgmgr-info
	libtzplatform-config)
FOREACH(FLAGS ${PKGS_CFLAGS})
	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${FLAGS}")
ENDFOREACH(FLAGS)

SET(INC_DIR include)
INCLUDE_DIRECTORIES(${INC_DIR})

ADD_LIBRARY(${PACKAGE_MANAGER} SHARED ${SOURCES})
TARGET_LINK_LIBRARIES(${PACKAGE_MANAGER} ${PKGS_LDFLAGS})

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC -Wall -fvisibility=hidden")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -g")

SET_TARGET_PROPERTIES(${PACKAGE_MANAGER} PROPERTIES VERSION ${FULLVER})
SET_TARGET_PROPERTIES(${PACKAGE_MANAGER} PROPERTIES SOVERSION ${MAJORVER})
SET_TARGET_PROPERTIES(${PACKAGE_MANAGER} PROPERTIES CLEAN_DIRECT_OUTPUT 1)

SET(PC_NAME ${PACKAGE_MANAGER})
SET(PC_REQUIRED "capi-base-common")
SET(PC_LDFLAGS -l${PACKAGE_MANAGER})
SET(PC_CFLAGS -I\${PREFIX}/include/appfw)
CONFIGURE_FILE(capi-appfw-package-manager.pc.in ${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE_MANAGER}.pc @ONLY)

INSTALL(TARGETS ${PACKAGE_MANAGER} DESTINATION ${LIB_INSTALL_DIR})
INSTALL(DIRECTORY ${INC_DIR}/ DESTINATION include/appfw)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE_MANAGER}.pc DESTINATION ${LIB_INSTALL_DIR}/pkgconfig)

ADD_SUBDIRECTORY(tool)
