CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(capi-appfw-package-manager C)
SET(SOURCES src/package_info.c
	src/package_manager.c
	src/package_manager_internal.c)

INCLUDE(FindPkgConfig)
pkg_check_modules(PKGS REQUIRED
	capi-base-common
	dlog
	vconf
	aul
	pkgmgr
	pkgmgr-info
	libtzplatform-config)
FOREACH(FLAGS ${PKGS_CFLAGS})
	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${FLAGS}")
ENDFOREACH(FLAGS)

SET(INC_DIR include)
INCLUDE_DIRECTORIES(${INC_DIR})

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PKGS_LDFLAGS})

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC -Wall -fvisibility=hidden")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -g")

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES VERSION ${FULLVER})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES SOVERSION ${MAJORVER})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES CLEAN_DIRECT_OUTPUT 1)

SET(PC_PREFIX ${CMAKE_INSTALL_PREFIX})
CONFIGURE_FILE(capi-appfw-package-manager.pc.in ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.pc @ONLY)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${LIB_INSTALL_DIR})
INSTALL(DIRECTORY ${INC_DIR}/ DESTINATION include/appfw)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.pc DESTINATION ${LIB_INSTALL_DIR}/pkgconfig)

ADD_SUBDIRECTORY(tool)
